# dprint-cmakefmt

./: .gitattributes  .gitignore  AGENTS.md  CHECKLIST.md  Cargo.toml  LICENSE  README.md  VISION.md  build.rs  dprint.jsonc  hk.pkl  mise.toml  schema.json
.github/actions/setup-ci-deps/: action.yml
.github/workflows/: ci.yml  release.yml
.mise/tasks/: bench
scripts/: fetch_cmakefmt.sh
src/: lib.rs
support/bench-fixtures/: CMakeLists.txt
support/bench-fixtures/cmake/: InstallRules.cmake  PackageConfig.cmake.in
support/bench-fixtures/modules/: FindWidget.cmake
support/patches/: cmakefmt-rust-dprint-wasm.patch
tests/: behavior_fixtures.rs  plugin.bats
tests/fixtures/behavior/basic_cmakelists/input/: CMakeLists.txt
tests/fixtures/behavior/indentation/expected/: CMakeLists.txt
tests/fixtures/behavior/indentation/input/: CMakeLists.txt
tests/fixtures/behavior/line_width/expected/: CMakeLists.txt
tests/fixtures/behavior/line_width/input/: CMakeLists.txt
tests/fixtures/behavior/module_file/expected/: FindWidget.cmake
tests/fixtures/behavior/module_file/input/: FindWidget.cmake
tests/fixtures/behavior/no_change/expected/: CMakeLists.txt
tests/fixtures/behavior/no_filesystem_discovery/input/: .cmake-format.py  CMakeLists.txt
tests/fixtures/behavior/unknown_config/: invalid-config.jsonc
tests/fixtures/dprint/: local-plugin.jsonc
