[package]
name = "dprint-cmakefmt"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sargunv/dprint-cmakefmt"
rust-version = "1.96"
description = "dprint plugin for formatting CMake files with cmakefmt"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cmakefmt = { package = "cmakefmt-rust", version = "1.6.0", default-features = false }
dprint-core = { version = "0.68.2", features = ["wasm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[patch.crates-io]
cmakefmt-rust = { path = "third_party/cmakefmt-rust-1.6.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = "symbols"
